# Ray-Tracer

./: .gitignore  Ray-Tracer.sln
Ray-Tracer/: AABB.cpp  AABB.h  CMakeLists.txt  Film.cpp  Film.h  Light.h  RayTracerAttempt1.vcxproj  RayTracerAttempt1.vcxproj.filters  Sampler.cpp  Sampler.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  TODO.txt  Transform.cpp  Transform.h  Utils.cpp  Variables.h  main.cpp  objParser.cpp  objParser.h  readfile.cpp  readfile.h  test_scenes.cpp
Ray-Tracer/glm-0.9.2.7/glm/core/: type_vec3.inl
RayTracerAttempt1/: Camera.cpp  Camera.h  Color.h  Ray.h  RayTracerAttempt1.vcxproj  RayTracerAttempt1.vcxproj.filters  Scene.cpp  Scene.h  Shape.h  Variables.h  main.cpp  objParser.cpp  objParser.h  test_scenes.cpp  test_scenes.h
